--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.1.0
   http: ^1.1.0
+  intl: ^0.18.1
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
